[package]
name = "yn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
colored = "2.0.0"
futures = "0.3.23"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.143"
serde_derive = "1.0.143"
tokio = { version = "1.0.2", features = ["full"] }
